--- a/loopVideo.html
+++ b/loopVideo.html
@@ -4,23 +4,23 @@
 <script>
 var sentences= 
 [
- ['journey27.mp4', 
- //'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4',
+ [//'journey27.mp4', 
+ 'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4',
   [
     [1, 2],
     [5, 7]
   ]
  ],
- ['journey28.mp4', 
- //'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4',
+ [//'journey28.mp4', 
+ 'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4',
   [
     [10, 12],
     [13, 17],
     [25, 36]
   ]
  ],
- ['journey29.mp4', 
- //'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/WeAreGoingOnBullrun.mp4',
+ [//'journey29.mp4', 
+ 'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/WeAreGoingOnBullrun.mp4',
   [
     [13, 15],
     [15, 19],
