--- a/loopVideo.html
+++ b/loopVideo.html
@@ -47,7 +47,7 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 
 function playVideo(myUrl, startTime, endTime) { 
-  document.getElementById("demo").innerHTML +=myUrl + " start:"+startTime+" end: "+endTime+"<br>";
+  //document.getElementById("demo").innerHTML +=myUrl + " start:"+startTime+" end: "+endTime+"<br>";
   
   //video.src = 'video/'+myUrl;
   video.src = myUrl;
