--- a/loopVideo.html
+++ b/loopVideo.html
@@ -38,7 +38,7 @@ var maxTime;
 
 document.addEventListener('DOMContentLoaded', () => {
   video = document.getElementById("myVideo");
-
+  video.defaultPlaybackRate = 0.70;
   video.addEventListener("timeupdate", function(){
     if(video.currentTime >= maxTime){
       myLoop();
