--- a/loopVideo.html
+++ b/loopVideo.html
@@ -172,7 +172,7 @@ function myLoop(){
 </video>
 
 <br>
-<a href="#" onclick="myLoop()" > Play </a>
+<a href="#" onclick="myLoop()" > Play All Videos</a>
 
 <br>
 <p id="demo"></p>
