--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <script>
 var sentences= 
 [
- [//'journey27.mp4', 
- 'https://vyha18.github.io/video/journey27.mp4',
+ ['journey27.mp4', 
+ //'https://vyha18.github.io/video/journey27.mp4',
   [
     [1,7],
     [12,17],
@@ -40,8 +40,8 @@ var sentences=
    
   ]
  ],
- [//'journey28.mp4', 
- 'https://vyha18.github.io/video/journey28.mp4',
+ ['journey28.mp4', 
+ //'https://vyha18.github.io/video/journey28.mp4',
   [
     [1,7],
     [7,22],
@@ -95,8 +95,8 @@ var sentences=
 
   ]
  ],
- [//'journey29.mp4', 
- 'https://vyha18.github.io/video/journey29.mp4',
+ ['journey29.mp4', 
+ //'https://vyha18.github.io/video/journey29.mp4',
   [
     [1,7],
     [10,24],
