--- a/index.html
+++ b/index.html
@@ -4,8 +4,58 @@
 <script>
 var sentences= 
 [
+  ['rocketgirl1.mp4', 
+   [
+    [8,13],
+    [27,34],
+    [39,43],
+    [43,46],
+    [47,51],
+    [51,54],
+    [54,58],
+    [58,61],
+    [61,64],
+    [64,69],
+    [69,72],
+    [72,76],
+    [76,79],
+    [82,87],
+    [87,92],
+    [94,102],
+    [102,105],
+    [108,113],
+    [113,119],
+    [119,124],
+    [124,128],
+    [128,135],
+    [135,138],
+    [138,141],
+    [141,144],
+    [144,149],
+    [149,152],
+    [152,154],
+    [154,159],
+    [159,163],
+    [152,167],
+    [167,171],
+    [171,174],
+    [174,178],
+    [178,188],
+    [188,194],
+    [194,199],
+    [199,206],
+    [206,209],
+    [209,214],
+    [214,217],
+    [217,222],
+    [222,228],
+    [228,235],
+    [235,238],
+    [238,241]
+  ]
+ ],
+ 
  ['journey27.mp4', 
- //'https://vyha18.github.io/video/journey27.mp4',
   [
     [1,7],
     [12,17],
