--- a/index.html
+++ b/index.html
@@ -93,6 +93,33 @@ var sentences=
    ]
  ],
  
+ ['rocketgirl3.mp4', 
+   [
+     [6,15],
+      [15,25],
+      [25,33],
+      [33,42],
+      [42,52],
+      [52,57],
+      [57,63],
+      [63,66],
+      [66,73],
+      [73,82],
+      [82,94],
+      [94,104],
+      [104,114],
+      [114,132],
+      [132,138],
+      [138,154],
+      [154,161],
+      [161,169],
+      [169,175],
+      [175,179],
+      [179,183],
+      [183,191],
+      [191,206]
+   ]
+ ],  
  ['journey27.mp4', 
   [
     [1,7],
