--- a/index.html
+++ b/index.html
@@ -120,6 +120,50 @@ var sentences=
       [191,206]
    ]
  ],  
+ ['rocketgirl3.mp4', 
+   [
+      [6,13],
+      [13,22],
+      [22,32],
+      [32,36],
+      [36,40],
+      [40,45],
+      [45,49],
+      [49,64],
+      [64,67],
+      [67,72],
+      [72,76],
+      [76,85],
+      [85,96],
+      [96,99],
+      [99,104],
+      [104,112],
+      [112,115],
+      [115,120],
+      [120,125],
+      [125,129],
+      [129,134],
+      [134,137],
+      [137,140],
+      [140,146],
+      [146,153],
+      [153,158],
+      [158,166],
+      [166,172],
+      [172,179],
+      [179,181],
+      [181,186],
+      [186,196],
+      [196,206],
+      [206,211],
+      [211,220],
+      [220,224],
+      [224,227],
+      [227,234],
+      [234,237],
+      [237,254]
+   ]
+ ],  
  ['journey27.mp4', 
   [
     [1,7],
