--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ function listVideos(){
   
 </script>
 </head>
-<body>
+<body onload="listVideos()">
 
 
 <video id="myVideo" width="1000" height="800" controls autoplay loop>
