--- a/index.html
+++ b/index.html
@@ -4,6 +4,71 @@
 <script>
 var sentences= 
 [
+  ['rocketgirlvsstinkybart1.mp4', 
+   [
+     [1,8],
+      [10,34],
+      [34,39],
+      [39,45],
+      [45,55],
+      [55,71],
+      [71,79],
+      [79,87],
+      [87,94],
+      [94,100],
+      [100,107],
+      [107,109],
+      [109,122],
+      [122,125],
+      [125,135],
+      [135,142],
+      [142,152],
+      [152,161],
+      [161,166],
+      [166,168],
+      [168,178],
+      [178,182],
+      [182,194],
+      [194,196],
+      [196,205],
+      [205,214],
+      [214,218],
+      [218,225],
+      [225,219],
+      [219,237],
+      [237,242]
+   ]
+ ],
+['rocketgirlvsstinkybart1.mp4', 
+   [
+     [1,8],
+      [10,19],
+      [19,27],
+      [27,35],
+      [35,42],
+      [42,50],
+      [50,61],
+      [61,65],
+      [65,68],
+      [68,77],
+      [77,89],
+      [89,93],
+      [93,100],
+      [100,111],
+      [111,116],
+      [116,125],
+      [125,131],
+      [131,136],
+      [136,145],
+      [145,160],
+      [160,165],
+      [165,171],
+      [171,174],
+      [174,193],
+      [193,201],
+      [201,211]
+    ]
+ ],
   ['rocketgirl1.mp4', 
    [
       [8,15],
