--- a/index.html
+++ b/index.html
@@ -4,6 +4,46 @@
 <script>
 var sentences= 
 [
+  ['RocketGirlFreddieFreeze1.mp4', 
+   [
+     [1,14],
+[14,28],
+[28,31],
+[31,38],
+[38,45],
+[45,50],
+[50,58],
+[58,68],
+[68,73],
+[73,79],
+[79,86],
+[86,93],
+[93,98],
+[98,104],
+[104,111],
+[111,115],
+[115,120],
+[120,125],
+[125,134],
+[134,139],
+[139,149],
+[149,162],
+[162,166],
+[166,172],
+[172,176],
+[176,183],
+[183,189],
+[189,193],
+[193,197],
+[197,203],
+[203,207],
+[207,215],
+[215,230],
+[230,233]
+   ]
+ ],
+  
+  /*
   ['rocketgirlvsstinkybart1.mp4', 
    [
      [1,8],
@@ -69,6 +109,7 @@ var sentences=
       [201,211]
     ]
  ],
+  */
   ['rocketgirl1.mp4', 
    [
       [8,15],
