--- a/index.html
+++ b/index.html
@@ -42,7 +42,46 @@ var sentences=
 [230,233]
    ]
  ],
-  
+['RocketGirlFreddieFreeze2.mp4', 
+  [
+
+[6,15],
+[15,24],
+[24,30],
+[30,36],
+[36,42],
+[42,49],
+[49,61],
+[61,68],
+[68,71],
+[71,75],
+[75,77],
+[77,87],
+[87,93],
+[93,104],
+[104,115],
+[115,121],
+[121,124],
+[124,133],
+[133,141],
+[141,149],
+[149,155],
+[155,158],
+[158,162],
+[162,171],
+[171,177],
+[177,180],
+[180,185],
+[185,188],
+[188,191],
+[191,200],
+[200,207],
+[207,221],
+[221,226],
+[226,231]
+  ]
+ ],
+    
   /*
   ['rocketgirlvsstinkybart1.mp4', 
    [
