--- a/index.html
+++ b/index.html
@@ -81,7 +81,54 @@ var sentences=
 [226,231]
   ]
  ],
-    
+ ['RocketGirlFreddieFreeze3.mp4', 
+  [
+    [8,14],
+[14,25],
+[25,29],
+[29,34],
+[34,39],
+[39,42],
+[42,45],
+[45,52],
+[52,55],
+[55,58],
+[58,61],
+[61,66],
+[66,69],
+[69,73],
+[73,76],
+[76,79],
+[79,82],
+[82,86],
+[86,90],
+[90,99],
+[99,101],
+[101,106],
+[106,108],
+[108,114],
+[114,119],
+[119,123],
+[123,128],
+[128,133],
+[133,139],
+[139,144],
+[144,149],
+[149,153],
+[153,157],
+[157,160],
+[160,164],
+[164,168],
+[168,171],
+[171,175],
+[175,184],
+[184,192],
+[192,195],
+[195,199],
+[199,207]
+  ]
+ ],
+  
   /*
   ['rocketgirlvsstinkybart1.mp4', 
    [
