--- a/index.html
+++ b/index.html
@@ -129,6 +129,48 @@ var sentences=
   ]
  ],
   
+  ['RocketGirlFreddieFreeze4.mp4', 
+    [
+      [7,13],
+[13,24],
+[24,26],
+[26,34],
+[34,43],
+[43,51],
+[51,58],
+[58,60],
+[60,65],
+[65,71],
+[71,80],
+[80,89],
+[89,96],
+[96,102],
+[102,106],
+[106,109],
+[109,116],
+[116,122],
+[122,127],
+[127,131],
+[131,138],
+[138,143],
+[143,148],
+[148,154],
+[154,159],
+[159,165],
+[165,169],
+[169,175],
+[175,178],
+[178,185],
+[185,187],
+[187,192],
+[192,197],
+[197,202],
+[202,210],
+[210,214],
+[214,219],
+[219,223]
+    ]
+ ],
   /*
   ['rocketgirlvsstinkybart1.mp4', 
    [
