--- a/index.html
+++ b/index.html
@@ -4,6 +4,50 @@
 <script>
 var sentences= 
 [
+  ['RocketGirlHypnotizedStudents1.mp4', 
+    [
+      [8,15],
+[15,27],
+[27,34],
+[34,40],
+[40,47],
+[47,56],
+[56,62],
+[62,76],
+[76,82],
+[82,86],
+[86,97],
+[97,101],
+[101,103],
+[103,107],
+[107,109],
+[109,113],
+[113,117],
+[117,119],
+[119,128],
+[128,132],
+[132,139],
+[139,148],
+[148,152],
+[152,161],
+[161,165],
+[165,169],
+[169,172],
+[172,176],
+[176,179],
+[179,183],
+[183,187],
+[187,190],
+[190,193],
+[193,197],
+[197,202],
+[202,207],
+[207,213],
+[213,216],
+[216,219],
+[219,225]
+    ]
+ ],
   ['RocketGirlFreddieFreeze1.mp4', 
    [
      [8,15],
