--- a/index.html
+++ b/index.html
@@ -48,6 +48,59 @@ var sentences=
 [219,225]
     ]
  ],
+  ['RocketGirlHypnotizedStudents2.mp4', 
+    [
+       [7,13],
+[13,21],
+[21,24],
+[24,28],
+[28,34],
+[34,36],
+[36,41],
+[41,44],
+[44,50],
+[50,57],
+[57,65],
+[65,69],
+[69,72],
+[72,77],
+[77,80],
+[80,84],
+[84,88],
+[88,91],
+[91,99],
+[99,108],
+[108,112],
+[112,116],
+[116,119],
+[119,122],
+[122,126],
+[126,133],
+[133,138],
+[138,149],
+[149,151],
+[151,154],
+[154,160],
+[160,162],
+[162,167],
+[167,172],
+[172,176],
+[176,182],
+[182,185],
+[185,193],
+[193,196],
+[196,199],
+[199,204],
+[204,207],
+[207,210],
+[210,212],
+[212,216],
+[216,220],
+[220,223],
+[223,226],
+[226,234]
+    ]
+ ],
   ['RocketGirlFreddieFreeze1.mp4', 
    [
      [8,15],
