--- a/index.html
+++ b/index.html
@@ -101,6 +101,57 @@ var sentences=
 [226,234]
     ]
  ],
+  ['RocketGirlHypnotizedStudents3.mp4', 
+  [
+      [8,14],
+[14,30],
+[30,34],
+[34,38],
+[38,45],
+[45,51],
+[51,58],
+[58,62],
+[62,64],
+[64,67],
+[67,70],
+[70,76],
+[76,78],
+[78,82],
+[82,86],
+[86,90],
+[90,94],
+[94,98],
+[98,101],
+[101,104],
+[104,107],
+[107,112],
+[112,117],
+[117,121],
+[121,125],
+[125,127],
+[127,129],
+[129,133],
+[133,136],
+[136,140],
+[140,143],
+[143,146],
+[146,149],
+[149,155],
+[155,160],
+[160,168],
+[168,171],
+[171,176],
+[176,180],
+[180,184],
+[184,195],
+[195,200],
+[200,203],
+[203,207],
+[207,211],
+[211,216],
+[216,223]
+  ]
+ ],
   ['RocketGirlFreddieFreeze1.mp4', 
    [
      [8,15],
