--- a/index.html
+++ b/index.html
@@ -152,6 +152,60 @@ var sentences=
 [216,223]
   ]
  ],
+ ['RocketGirlHypnotizedStudents4.mp4', 
+  [
+    [7,13],
+[13,23],
+[23,28],
+[28,31],
+[31,34],
+[34,38],
+[38,41],
+[41,43],
+[43,46],
+[46,49],
+[49,52],
+[52,55],
+[55,59],
+[59,63],
+[63,68],
+[68,74],
+[74,77],
+[77,80],
+[80,83],
+[83,89],
+[89,95],
+[95,100],
+[100,104],
+[104,110],
+[110,115],
+[115,119],
+[119,123],
+[123,127],
+[127,130],
+[130,135],
+[135,141],
+[141,148],
+[148,152],
+[152,157],
+[157,160],
+[160,164],
+[164,171],
+[171,174],
+[174,180],
+[180,185],
+[185,187],
+[187,190],
+[190,193],
+[193,196],
+[196,200],
+[200,205],
+[205,210],
+[210,215],
+[215,218],
+[218,221]
+   ]
+ ],
   ['RocketGirlFreddieFreeze1.mp4', 
    [
      [8,15],
