--- a/index.html
+++ b/index.html
@@ -733,7 +733,56 @@ var sentences=
     [286,297]
 
   ]
+ ],
+ ['journey30.mp4', 
+  [
+    [1,8],
+[8,18],
+[18,26],
+[26,32],
+[32,38],
+[38,42],
+[42,45],
+[45,48],
+[48,57],
+[57,61],
+[61,68],
+[68,73],
+[73,80],
+[80,95],
+[95,98],
+[98,108],
+[108,114],
+[114,118],
+[118,121],
+[121,124],
+[124,131],
+[131,134],
+[134,142],
+[142,151],
+[151,159],
+[159,164],
+[164,170],
+[170,179],
+[179,190],
+[190,204],
+[204,209],
+[209,215],
+[215,227],
+[227,232],
+[232,237],
+[237,241],
+[241,248],
+[248,250],
+[250,254],
+[254,268],
+[268,272],
+[272,279],
+[279,291],
+[291,296]
+  ]
  ]
+
 ];
 
 let video_index = 0;
