--- a/index.html
+++ b/index.html
@@ -781,8 +781,56 @@ var sentences=
 [279,291],
 [291,296]
   ]
+ ],
+ ['journey30.mp4', 
+  [
+    [1,7],
+[7,24],
+[24,27],
+[27,31],
+[31,35],
+[35,39],
+[39,42],
+[42,48],
+[48,59],
+[59,65],
+[65,70],
+[70,84],
+[84,87],
+[87,93],
+[93,97],
+[97,101],
+[101,106],
+[106,112],
+[112,116],
+[116,123],
+[123,131],
+[131,135],
+[135,148],
+[148,151],
+[151,156],
+[156,162],
+[162,172],
+[172,179],
+[179,185],
+[185,193],
+[193,204],
+[204,209],
+[209,214],
+[214,219],
+[219,223],
+[223,228],
+[228,245],
+[245,252],
+[252,256],
+[256,266],
+[266,271],
+[271,275],
+[275,281],
+[281,293],
+[293,308]
+  ]
  ]
-
 ];
 
 let video_index = 0;
