--- a/index.html
+++ b/index.html
@@ -4,6 +4,39 @@
 <script>
 var sentences= 
 [
+  ['jemimaduck1.mp4', 
+    [
+       [7,15],
+[32,37],
+[37,45],
+[45,49],
+[49,53],
+[53,57],
+[57,65],
+[65,71],
+[71,76],
+[76,80],
+[80,85],
+[85,91],
+[91,96],
+[96,101],
+[101,104],
+[104,108],
+[108,112],
+[112,124],
+[124,128],
+[128,132],
+[132,140],
+[140,145],
+[164,170],
+[184,188],
+[188,193],
+[193,197],
+[197,201],
+[201,205]
+    ],'Jemima Duck 1'
+ ],
+    
   ['RocketGirlHypnotizedStudents1.mp4', 
     [
       [8,15],
