--- a/index.html
+++ b/index.html
@@ -36,6 +36,39 @@ var sentences=
 [201,205]
     ],'Jemima Duck 1'
  ],
+ ['jemimaduck2.mp4', 
+  [
+    [5,13],
+[21,26],
+[26,30],
+[30,34],
+[34,39],
+[39,45],
+[45,50],
+[50,54],
+[54,58],
+[58,63],
+[63,70],
+[70,75],
+[75,78],
+[78,83],
+[83,89],
+[89,94],
+[94,97],
+[97,103],
+[103,108],
+[108,111],
+[111,114],
+[114,118],
+[118,123],
+[123,126],
+[126,130],
+[130,134],
+[134,137],
+[137,141]
+  ],'Jemima Duck 2'
+ ],  
+    
     
   ['RocketGirlHypnotizedStudents1.mp4', 
     [
@@ -919,6 +952,9 @@ function myLoop(){
 function playAllVideos(){
   let text = "Do you want to play all the videos?";
   if (confirm(text) == true) {
+    video_index = 0;
+    time_index = 0;
+    repeat = 0;
     myLoop();
   }
 }
