--- a/index.html
+++ b/index.html
@@ -68,7 +68,40 @@ var sentences=
 [137,141]
   ],'Jemima Duck 2'
  ],  
-    
+
+ ['jemimaduck3.mp4', 
+  [
+    [7,15],
+    [15,21],
+    [31,34],
+    [34,39],
+    [39,42],
+    [42,46],
+    [46,53],
+    [53,56],
+    [56,60],
+    [60,66],
+    [66,73],
+    [73,77],
+    [77,86],
+    [93,99],
+    [99,104],
+    [104,109],
+    [133,139],
+    [139,144],
+    [144,148],
+    [148,152],
+    [152,160],
+    [160,168],
+    [168,169],
+    [169,174],
+    [174,179],
+    [179,182],
+    [182,187],
+    [187,192]
+
+  ],'Jemima Duck 3'
+ ], 
     
   ['RocketGirlHypnotizedStudents1.mp4', 
     [
