--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ var sentences=
 [193,197],
 [197,201],
 [201,205]
-    ],'Jemima Duck 1'
+    ],'The Tale of Jemima Puddle Duck 1: Jemima Is Upset'
  ],
  ['jemimaduck2.mp4', 
   [
@@ -66,7 +66,7 @@ var sentences=
 [130,134],
 [134,137],
 [137,141]
-  ],'Jemima Duck 2'
+  ],'The Tale of Jemima Puddle Duck 2: A New Friend'
  ],  
 
  ['jemimaduck3.mp4', 
@@ -100,7 +100,7 @@ var sentences=
     [182,187],
     [187,192]
 
-  ],'Jemima Duck 3'
+  ],'The Tale of Jemima Puddle Duck 3: Nine Eggs'
  ], 
   ['jemimaduck4.mp4', 
       [
@@ -138,7 +138,7 @@ var sentences=
         [182,197],
         [197,209]
 
-    ],'Jemima Duck 4'
+    ],'The Tale of Jemima Puddle Duck 4: Kep, the Farm Dog'
  ],   
   ['RocketGirlHypnotizedStudents1.mp4', 
     [
