--- a/index.html
+++ b/index.html
@@ -140,6 +140,33 @@ var sentences=
 
     ],'The Tale of Jemima Puddle Duck 4: Kep, the Farm Dog'
  ],   
+  ['jemimababy1.mp4', 
+  [
+[1,9],
+[18,21],
+[21,25],
+[25,36],
+[36,49],
+[49,53],
+[53,59],
+[59,69],
+[69,74],
+[74,81],
+[81,90],
+[90,99],
+[99,104],
+[104,110],
+[110,115],
+[115,119],
+[119,128],
+[128,134],
+[134,137],
+[137,145],
+[145,151]
+
+],'Jemima Takes Care of the Ducklings - Episde 1: One Baby'
+ ],
+  
   ['RocketGirlHypnotizedStudents1.mp4', 
     [
       [8,15],
