--- a/index.html
+++ b/index.html
@@ -167,6 +167,34 @@ var sentences=
 ],'Jemima Takes Care of the Ducklings - Episde 1: One Baby'
  ],
   
+   ['jemimababy2.mp4', 
+  [
+[1,10],
+[28,35],
+[35,39],
+[39,44],
+[44,48],
+[48,56],
+[56,59],
+[59,64],
+[64,71],
+[71,81],
+[81,95],
+[111,116],
+[116,120],
+[120,122],
+[122,125],
+[125,142],
+[138,144],
+[144,149],
+[167,171],
+[171,175],
+[175,181],
+[181,185]
+
+],'Jemima Takes Care of the Ducklings - Episde 1: More Babies'
+ ],
+
   ['RocketGirlHypnotizedStudents1.mp4', 
     [
       [8,15],
