--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
 <script>
 var sentences= 
 [
+   ['peterrabbit1.mp4', 
+      [
+        [7,14],
+        [14,21],
+        [21,30],
+        [30,34],
+        [34,46],
+        [46,50],
+        [50,53],
+        [53,57],
+        [57,61],
+        [61,64],
+        [64,69],
+        [69,75],
+        [75,83],
+        [83,88],
+        [88,97],
+        [97,100],
+        [100,104],
+        [104,112],
+        [112,115],
+        [115,119],
+        [119,124],
+        [124,131],
+        [131,138],
+        [138,142]
+
+    ],'The tale of Peter Rabbit - Episode 1: Mrs Rabbit Goes into Town'
+ ],
+
   ['jemimaduck1.mp4', 
     [
        [7,15],
