--- a/index.html
+++ b/index.html
@@ -33,6 +33,42 @@ var sentences=
 
     ],'The tale of Peter Rabbit - Episode 1: Mrs Rabbit Goes into Town'
  ],
+   
+   ['peterrabbit2.mp4', 
+  [
+[1,9],
+[9,14],
+[14,22],
+[22,34],
+[34,44],
+[44,55],
+[55,62],
+[62,65],
+[65,77],
+[77,86],
+[86,89],
+[89,96],
+[96,101],
+[101,106],
+[106,108],
+[108,111],
+[111,114],
+[114,120],
+[120,123],
+[123,126],
+[126,129],
+[129,135],
+[135,143],
+[143,149],
+[149,152],
+[152,156],
+[156,160],
+[160,163],
+[163,166],
+[166,170],
+[170,177]
+],'The tale of Peter Rabbit - Episode 2: Into the Garden'
+ ],
 
   ['jemimaduck1.mp4', 
     [
