--- a/index.html
+++ b/index.html
@@ -70,6 +70,39 @@ var sentences=
 ],'The tale of Peter Rabbit - Episode 2: Into the Garden'
  ],
 
+ ['peterrabbit3.mp4', 
+  [
+[1,9],
+[9,26],
+[26,31],
+[31,35],
+[35,40],
+[40,43],
+[43,52],
+[52,55],
+[55,59],
+[59,62],
+[62,69],
+[69,72],
+[72,76],
+[76,84],
+[84,88],
+[88,93],
+[93,98],
+[98,102],
+[102,105],
+[105,111],
+[111,113],
+[113,117],
+[117,120],
+[120,126],
+[126,130],
+[130,136],
+[136,140],
+[140,143],
+[143,148]
+],'The tale of Peter Rabbit - Episode 3: The Chase'
+ ],  
   ['jemimaduck1.mp4', 
     [
        [7,15],
