--- a/index.html
+++ b/index.html
@@ -103,6 +103,41 @@ var sentences=
 [143,148]
 ],'The tale of Peter Rabbit - Episode 3: The Chase'
  ],  
+   
+   ['peterrabbit4.mp4', 
+  [
+[1,9],
+[20,24],
+[24,29],
+[29,37],
+[37,47],
+[47,55],
+[55,68],
+[68,64],
+[64,77],
+[77,81],
+[81,85],
+[85,89],
+[89,92],
+[92,101],
+[101,106],
+[106,113],
+[113,117],
+[117,120],
+[120,126],
+[126,131],
+[131,137],
+[137,144],
+[144,146],
+[146,152],
+[152,166],
+[166,175],
+[175,178],
+[178,185],
+[185,197],
+[197,207]
+],'The tale of Peter Rabbit - Episode 4: The Garden Gate'
+ ],
   ['jemimaduck1.mp4', 
     [
        [7,15],
