--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ var sentences=
         [131,138],
         [138,142]
 
-    ],'The tale of Peter Rabbit - Episode 1: Mrs Rabbit Goes into Town'
+    ],'The Tale of Peter Rabbit - Episode 1: Mrs Rabbit Goes into Town'
  ],
    
    ['peterrabbit2.mp4', 
@@ -67,7 +67,7 @@ var sentences=
 [163,166],
 [166,170],
 [170,177]
-],'The tale of Peter Rabbit - Episode 2: Into the Garden'
+],'The Tale of Peter Rabbit - Episode 2: Into the Garden'
  ],
 
  ['peterrabbit3.mp4', 
@@ -101,7 +101,7 @@ var sentences=
 [136,140],
 [140,143],
 [143,148]
-],'The tale of Peter Rabbit - Episode 3: The Chase'
+],'The Tale of Peter Rabbit - Episode 3: The Chase'
  ],  
    
    ['peterrabbit4.mp4', 
@@ -136,8 +136,41 @@ var sentences=
 [178,185],
 [185,197],
 [197,207]
-],'The tale of Peter Rabbit - Episode 4: The Garden Gate'
+],'The Tale of Peter Rabbit - Episode 4: The Garden Gate'
  ],
+   ['benjaminbunny1.mp4', 
+  [
+[6,15],
+[15,24],
+[24,32],
+[32,36],
+[36,46],
+[46,50],
+[50,57],
+[57,65],
+[65,72],
+[72,75],
+[75,80],
+[80,88],
+[88,94],
+[94,100],
+[100,106],
+[106,112],
+[112,115],
+[115,118],
+[118,123],
+[123,126],
+[126,130],
+[130,133],
+[133,138],
+[138,141],
+[141,145],
+[145,153],
+[153,157],
+[157,160]
+],'The Tale of Benjamin Bunny - Episode 1: The Farmer Goes to Town'
+ ],
+   
   ['jemimaduck1.mp4', 
     [
        [7,15],
