--- a/index.html
+++ b/index.html
@@ -171,6 +171,39 @@ var sentences=
 ],'The Tale of Benjamin Bunny - Episode 1: The Farmer Goes to Town'
  ],
    
+  ['benjaminbunny2.mp4', 
+  [
+[6,13],
+[13,21],
+[30,37],
+[37,43],
+[43,51],
+[51,60],
+[60,64],
+[64,69],
+[69,73],
+[73,77],
+[77,81],
+[81,85],
+[85,90],
+[90,95],
+[95,99],
+[99,103],
+[103,107],
+[107,115],
+[115,122],
+[122,127],
+[127,131],
+[131,135],
+[135,139],
+[139,144],
+[144,150],
+[150,154],
+[154,158],
+[158,161],
+],'The Tale of Benjamin Bunny - Episode 2: The Scarecrow'
+ ],
+  
   ['jemimaduck1.mp4', 
     [
        [7,15],
