--- a/index.html
+++ b/index.html
@@ -203,7 +203,46 @@ var sentences=
 [158,161],
 ],'The Tale of Benjamin Bunny - Episode 2: The Scarecrow'
  ],
-  
+
+['benjaminbunny3.mp4', 
+  [
+[6,15],
+[15,23],
+[23,27],
+[27,31],
+[31,35],
+[35,38],
+[38,46],
+[46,51],
+[51,54],
+[54,57],
+[57,62],
+[62,68],
+[68,71],
+[71,75],
+[75,80],
+[80,85],
+[85,92],
+[92,98],
+[98,104],
+[104,107],
+[107,114],
+[114,125],
+[125,127],
+[127,131],
+[131,134],
+[134,137],
+[137,145],
+[145,150],
+[150,153],
+[153,158],
+[158,164],
+[164,170],
+[170,178],
+[178,184]
+],'The Tale of Benjamin Bunny - Episode 3: A Walk in the Garden'
+ ],
+   
   ['jemimaduck1.mp4', 
     [
        [7,15],
