--- a/index.html
+++ b/index.html
@@ -242,7 +242,38 @@ var sentences=
 [178,184]
 ],'The Tale of Benjamin Bunny - Episode 3: A Walk in the Garden'
  ],
-   
+
+ ['benjaminbunny4.mp4', 
+  [
+[6,14],
+[14,23],
+[23,28],
+[28,31],
+[31,38],
+[38,41],
+[41,44],
+[44,49],
+[49,53],
+[53,56],
+[56,60],
+[60,64],
+[64,69],
+[69,75],
+[75,79],
+[79,84],
+[84,90],
+[90,97],
+[97,107],
+[107,111],
+[111,114],
+[114,119],
+[119,126],
+[143,153],
+[153,160],
+[160,164],
+[164,170]
+],'The Tale of Benjamin Bunny - Episode 4: The Cat and the Basket'
+ ],   
   ['jemimaduck1.mp4', 
     [
        [7,15],
