--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@ var sentences=
 [219,223]
     ], 'Rocket Girl vs. Freddie Freeze - Episode 4: Ice Cream'
  ],
-  /*
+ 
   ['rocketgirlvsstinkybart1.mp4', 
    [
      [1,8],
@@ -868,9 +868,9 @@ var sentences=
       [225,219],
       [219,237],
       [237,242]
-   ]
+   ], 'Rocket Girl vs Stinky Bart 1'
  ],
-['rocketgirlvsstinkybart1.mp4', 
+['rocketgirlvsstinkybart2.mp4', 
    [
      [1,8],
       [10,19],
@@ -898,9 +898,9 @@ var sentences=
       [174,193],
       [193,201],
       [201,211]
-    ]
+    ], 'Rocket Girl vs Stinky Bart 2'
  ],
-  */
+  
   ['rocketgirl1.mp4', 
    [
       [8,15],
