--- a/index.html
+++ b/index.html
@@ -837,32 +837,32 @@ var sentences=
  
   ['rocketgirlvsstinkybart1.mp4', 
    [
-     [1,8],
+      [1,8],
       [10,34],
       [34,39],
       [39,45],
       [45,55],
       [55,71],
       [71,79],
-      [79,87],
-      [87,94],
-      [94,100],
+      [79,88],
+      [88,95],
+      [95,100],
       [100,107],
       [107,109],
       [109,122],
-      [122,125],
-      [125,135],
+      [122,126],
+      [126,135],
       [135,142],
       [142,152],
       [152,161],
       [161,166],
-      [166,168],
-      [168,178],
+      [166,169],
+      [169,178],
       [178,182],
       [182,194],
-      [194,196],
-      [196,205],
-      [205,214],
+      [194,197],
+      [197,206],
+      [206,214],
       [214,218],
       [218,225],
       [225,219],
@@ -872,10 +872,10 @@ var sentences=
  ],
 ['rocketgirlvsstinkybart2.mp4', 
    [
-     [1,8],
+      [1,8],
       [10,19],
-      [19,27],
-      [27,35],
+      [19,28],
+      [28,35],
       [35,42],
       [42,50],
       [50,61],
@@ -889,8 +889,8 @@ var sentences=
       [111,116],
       [116,125],
       [125,131],
-      [131,136],
-      [136,145],
+      [131,137],
+      [137,145],
       [145,160],
       [160,165],
       [165,171],
@@ -900,7 +900,115 @@ var sentences=
       [201,211]
     ], 'Rocket Girl vs Stinky Bart 2'
  ],
-  
+
+  ['rocketgirlvsstinkybart3.mp4', 
+   [
+      [1,8],
+      [10,14],
+      [14,16],
+      [16,19],
+      [19,22],
+      [22,25],
+      [25,29],
+      [29,31],
+      [31,36],
+      [36,41],
+      [41,44],
+      [44,49],
+      [49,55],
+      [55,67],
+      [67,70],
+      [70,73],
+      [73,77],
+      [77,80],
+      [80,84],
+      [84,90],
+      [90,99],
+      [99,106],
+      [106,109],
+      [109,113],
+      [113,118],
+      [118,126],
+      [126,131],
+      [131,134],
+      [134,143],
+      [143,147],
+      [147,150],
+      [150,159],
+      [159,161],
+      [161,168],
+      [168,173],
+      [173,176],
+      [176,178],
+      [178,181],
+      [181,187],
+      [187,190],
+      [190,193],
+      [193,198],
+      [198,202],
+      [202,204],
+      [204,211],
+      [211,214],
+      [214,220]
+    ], 'Rocket Girl vs Stinky Bart 3'
+ ],
+
+  ['rocketgirlvsstinkybart4.mp4', 
+   [
+      [1,8],
+      [12,20],
+      [20,28],
+      [28,33],
+      [33,38],
+      [38,41],
+      [41,45],
+      [45,50],
+      [50,54],
+      [54,60],
+      [60,69],
+      [69,71],
+      [71,74],
+      [74,79],
+      [79,85],
+      [85,89],
+      [89,92],
+      [92,96],
+      [96,100],
+      [100,103],
+      [103,110],
+      [110,116],
+      [116,121],
+      [121,125],
+      [125,131],
+      [131,133],
+      [133,136],
+      [136,139],
+      [139,143],
+      [143,146],
+      [146,152],
+      [152,156],
+      [156,161],
+      [161,164],
+      [164,170],
+      [170,173],
+      [173,175],
+      [175,179],
+      [179,185],
+      [185,188],
+      [188,190],
+      [190,192],
+      [192,196],
+      [196,199],
+      [199,204],
+      [204,208],
+      [208,210],
+      [210,214],
+      [214,219],
+      [219,224],
+      [224,227]
+    ], 'Rocket Girl vs Stinky Bart 4'
+ ],
+   
   ['rocketgirl1.mp4', 
    [
       [8,15],
