--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,70 @@ var sentences=
 [281,293],
 [293,308]
   ], 'Journey to the West - Chapter 31: Guanyin\'s Vase'
- ]
+ ],
+   
+ ['ladywhitebone.mp4', 
+  [
+     [1,8],
+      [8,18],
+      [18,24],
+      [24,28],
+      [32,41],
+      [41,49],
+      [49,52],
+      [52,58],
+      [58,61],
+      [61,67],
+      [67,71],
+      [71,81],
+      [81,89],
+      [89,94],
+      [94,97],
+      [97,101],
+      [101,104],
+      [104,110],
+      [110,113],
+      [113,122],
+      [122,126],
+      [126,129],
+      [129,134],
+      [134,139],
+      [139,144],
+      [144,153],
+      [153,159],
+      [159,168],
+      [168,178],
+      [178,181],
+      [181,187],
+      [187,192],
+      [192,198],
+      [198,201],
+      [201,205],
+      [205,209],
+      [209,213],
+      [213,220],
+      [220,224],
+      [224,230],
+      [230,234],
+      [234,238],
+      [238,244],
+      [244,250],
+      [250,253],
+      [253,259],
+      [259,267],
+      [267,271],
+      [271,274],
+      [274,278],
+      [278,284],
+      [284,291],
+      [291,296],
+      [296,300],
+      [300,306],
+      [306,309],
+      [309,316],
+      [316,320]
+  ], 'Journey to the West - Chapter 32: Lady White Bone'
+ ] 
 ];
 
 let video_index = 0;
