--- a/index.html
+++ b/index.html
@@ -4,6 +4,46 @@
 <script>
 var sentences= 
 [
+   ['pussclevercat1.mp4', 
+      [
+         [8,16],
+[16,22],
+[22,27],
+[27,30],
+[30,34],
+[34,42],
+[42,47],
+[47,53],
+[53,57],
+[57,62],
+[62,66],
+[66,71],
+[71,74],
+[74,77],
+[77,81],
+[81,84],
+[84,87],
+[87,93],
+[100,105],
+[105,108],
+[108,115],
+[115,119],
+[119,124],
+[124,128],
+[128,134],
+[134,138],
+[138,141],
+[141,145],
+[145,154],
+[154,157],
+[157,160],
+[160,167],
+[167,170],
+[170,176]
+         
+    ],'Puss in boots - Episode 1: A mill a Donkey and a Cat'
+ ],
+   
    ['peterrabbit1.mp4', 
       [
         [7,14],
