--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <script>
 var sentences= 
 [
+   
+         
    ['pussclevercat1.mp4', 
       [
          [8,16],
@@ -44,6 +46,45 @@ var sentences=
     ],'Puss in boots - Episode 1: A mill a Donkey and a Cat'
  ],
    
+   ['pussclevercat2.mp4', 
+      [
+       [1,7],
+[7,16],
+[16,22],
+[22,27],
+[27,32],
+[32,41],
+[41,48],
+[48,52],
+[52,58],
+[58,64],
+[64,68],
+[68,73],
+[73,76],
+[76,80],
+[80,83],
+[83,89],
+[89,94],
+[94,99],
+[99,105],
+[105,113],
+[113,118],
+[118,121],
+[121,127],
+[127,131],
+[131,137],
+[137,141],
+[141,145],
+[145,148],
+[148,155],
+[155,162],
+[162,167],
+[167,171],
+[171,174],
+[174,176],
+[176,180]  
+   ],'Puss in boots - Episode 2: Poor Carabas'
+ ],
    ['peterrabbit1.mp4', 
       [
         [7,14],
