--- a/index.html
+++ b/index.html
@@ -124,6 +124,154 @@ var sentences=
    ],'Puss in boots - Episode 16: Nervous Servants'
  ],      
          
+ ['pussogre1.mp4', 
+   [
+[1,7],
+[13,19],
+[19,21],
+[21,27],
+[27,34],
+[34,42],
+[42,46],
+[46,49],
+[49,59],
+[59,63],
+[63,68],
+[68,73],
+[73,78],
+[78,89],
+[89,92],
+[92,97],
+[97,103],
+[103,107],
+[107,110],
+[110,115],
+[115,119],
+[119,124],
+[124,127],
+[127,134],
+[134,143],
+[143,148],
+[148,153],
+[153,159],
+[159,165]
+
+], 'Puss in boots - Episode 17: A Game of Checkers'
+ ],
+
+
+['pussogre2.mp4', 
+   [
+[1,9],
+[16,21],
+[21,25],
+[25,28],
+[28,33],
+[33,37],
+[37,42],
+[42,48],
+[48,52],
+[52,56],
+[56,59],
+[59,62],
+[62,69],
+[69,74],
+[74,81],
+[81,89],
+[89,93],
+[93,100],
+[100,104],
+[104,107],
+[107,113],
+[113,120],
+[120,125],
+[125,130],
+[130,132],
+[132,135],
+[135,143],
+[143,147],
+[147,154],
+[154,158],
+[158,160],
+[160,163],
+[163,168],
+[168,172]
+    ], 'Puss in boots - Episode 18: The Ogre makes a Deal'
+ ],
+
+  ['pussogre3.mp4', 
+   [
+[1,7],
+[21,26],
+[29,33],
+[33,38],
+[38,41],
+[41,46],
+[46,50],
+[50,56],
+[56,61],
+[61,68],
+[68,73],
+[73,78],
+[78,89],
+[89,93],
+[93,97],
+[97,104],
+[104,111],
+[111,114],
+[114,118],
+[118,126],
+[126,130],
+[130,134],
+[134,138],
+[138,141],
+[141,144],
+[144,148],
+[148,151],
+[151,155],
+[155,158],
+[158,163],
+[163,166],
+[166,172]
+    ], 'Puss in boots - Episode 19: Chased by a Lion'
+ ],
+
+  ['pussogre4.mp4', 
+   [
+  [1,11],
+[13,19],
+[19,23],
+[23,26],
+[26,31],
+[31,34],
+[34,38],
+[38,41],
+[41,45],
+[45,48],
+[48,51],
+[51,56],
+[56,60],
+[60,68],
+[68,72],
+[72,80],
+[80,84],
+[84,88],
+[88,93],
+[93,96],
+[96,102],
+[102,107],
+[107,111],
+[111,120],
+[120,124],
+[124,132],
+[132,137],
+[137,141],
+[141,152],
+[152,161]
+    ], 'Puss in boots - Episode 20: Tricking an Ogre'
+ ],
+   
+   
    ['peterrabbit1.mp4', 
       [
         [7,14],
