--- a/index.html
+++ b/index.html
@@ -86,6 +86,153 @@ var sentences=
    ],'Puss in boots - Episode 2: Poor Carabas'
  ],
    
+ ['pusshasplan1.mp4', 
+   [
+[8,16],
+[20,26],
+[26,32],
+[32,37],
+[37,41],
+[41,44],
+[44,48],
+[48,51],
+[51,56],
+[56,59],
+[59,65],
+[65,68],
+[68,71],
+[71,75],
+[75,83],
+[83,86],
+[86,93],
+[93,97],
+[100,105],
+[105,111],
+[111,115],
+[115,117],
+[117,124],
+[130,138],
+[138,142],
+[142,147],
+[147,151],
+[151,157],
+[157,163],
+[163,171]
+], 'Puss in boots - Episode 5: Boots for Puss'
+ ],
+
+
+['pusshasplan2.mp4', 
+   [
+[1,7],
+[17,21],
+[21,24],
+[24,28],
+[28,32],
+[32,35],
+[35,43],
+[46,49],
+[49,53],
+[53,59],
+[59,64],
+[64,70],
+[70,76],
+[76,83],
+[83,89],
+[89,94],
+[98,102],
+[102,108],
+[108,112],
+[112,116],
+[116,120],
+[120,128],
+[128,130],
+[130,136],
+[136,142],
+[142,146],
+[146,151],
+[151,157],
+[157,161],
+[161,165],
+[165,169]
+    ], 'Puss in boots - Episode 6: Puss has a Plan'
+ ],
+
+  ['pusshasplan3.mp4', 
+   [
+[1,8],
+[14,20],
+[20,25],
+[25,31],
+[31,34],
+[34,39],
+[39,43],
+[43,46],
+[46,50],
+[50,59],
+[59,62],
+[62,66],
+[66,69],
+[69,72],
+[72,80],
+[80,85],
+[85,89],
+[89,93],
+[93,98],
+[98,102],
+[102,105],
+[105,112],
+[112,116],
+[116,121],
+[121,128],
+[128,132],
+[132,136],
+[136,142],
+[142,145],
+[145,150],
+[159,162],
+[162,166],
+[166,171],
+[171,175]
+    ], 'Puss in boots - Episode 7: The King'
+ ],
+
+  ['pusshasplan4.mp4', 
+   [
+[1,10],
+[12,18],
+[18,23],
+[23,26],
+[26,30],
+[30,35],
+[35,41],
+[41,46],
+[46,52],
+[52,56],
+[56,60],
+[60,65],
+[65,69],
+[69,73],
+[73,80],
+[80,87],
+[87,92],
+[92,97],
+[97,102],
+[102,108],
+[108,111],
+[111,116],
+[116,123],
+[123,132],
+[132,135],
+[135,140],
+[140,144],
+[144,151],
+[151,158],
+[158,163]
+    ], 'Puss in boots - Episode 8: Gifts from the Duke'
+ ],
+
+   
    ['pusscarabas4.mp4', 
       [
          [1,8],
