--- a/index.html
+++ b/index.html
@@ -232,6 +232,150 @@ var sentences=
     ], 'Puss in boots - Episode 8: Gifts from the Duke'
  ],
 
+  ['pusscastle1.mp4', 
+   [
+[8,15],
+[22,27],
+[27,32],
+[32,35],
+[35,44],
+[44,50],
+[50,55],
+[55,60],
+[60,65],
+[65,69],
+[69,74],
+[74,77],
+[77,83],
+[83,90],
+[90,95],
+[95,99],
+[99,102],
+[102,106],
+[106,110],
+[110,115],
+[115,119],
+[119,122],
+[122,127],
+[127,131],
+[131,137],
+[137,142],
+[142,152],
+[152,162]
+], 'Puss in boots - Episode 9: A Guest at the Castle'
+ ],
+
+
+['pusscastle2.mp4', 
+   [
+[1,8],
+[10,15],
+[15,21],
+[21,29],
+[29,34],
+[37,43],
+[43,48],
+[48,52],
+[52,58],
+[58,63],
+[63,69],
+[69,74],
+[74,78],
+[78,81],
+[81,85],
+[85,91],
+[91,93],
+[93,98],
+[98,108],
+[108,118],
+[118,123],
+[123,129],
+[129,135],
+[140,144],
+[144,149],
+[149,153],
+[153,158],
+[158,161],
+[161,165],
+[165,168]
+    ], 'Puss in boots - Episode 10: Beautiful Music'
+ ],
+
+  ['pusscastle3.mp4', 
+   [
+[1,8],
+[13,16],
+[16,23],
+[23,26],
+[26,32],
+[32,36],
+[36,41],
+[41,44],
+[53,58],
+[58,62],
+[62,65],
+[65,70],
+[70,75],
+[75,78],
+[78,81],
+[81,88],
+[88,94],
+[94,97],
+[97,101],
+[101,107],
+[107,110],
+[110,114],
+[114,118],
+[118,123],
+[123,127],
+[127,131],
+[131,136],
+[136,139],
+[139,143],
+[143,147],
+[147,153],
+[153,156],
+[156,168]
+    ], 'Puss in boots - Episode 11: Nets for Berries'
+ ],
+
+  ['pusscastle4.mp4', 
+   [
+[1,8],
+[13,16],
+[16,19],
+[19,23],
+[23,29],
+[29,36],
+[36,43],
+[43,46],
+[50,54],
+[54,58],
+[58,66],
+[68,75],
+[75,79],
+[79,85],
+[85,91],
+[91,97],
+[97,107],
+[107,113],
+[113,118],
+[123,128],
+[128,130],
+[130,134],
+[134,138],
+[138,142],
+[142,146],
+[146,150],
+[150,159],
+[159,162],
+[162,167],
+[167,171],
+[171,177]
+ ], 'Puss in boots - Episode 12: A Sneaky Plan'
+ ],
+   
+   
    
    ['pusscarabas4.mp4', 
       [
