--- a/index.html
+++ b/index.html
@@ -2142,6 +2142,12 @@ function listVideos(){
   document.getElementById("allVideos").style.fontSize = "x-large";
 }
 
+function hideVideo() {
+  document.getElementById("myVideo").style.visibility = "hidden";
+}
+function unhideVideo() {
+  document.getElementById("myVideo").style.visibility = "visible";
+}
   
 </script>
 </head>
@@ -2215,7 +2221,9 @@ function listVideos(){
 <br>
 <p id="allVideos"></p>
 <br><br>
-  
+<a href="#" onclick="hideVideo()" style="font-size: 30px; text-decoration: none" >Hide</a>
+<a href="#" onclick="unhideVideo()" style="font-size: 30px; text-decoration: none" >Unhide</a>
+ 
 <p id="demo"></p>
 </body>
 </html>
