--- a/index.html
+++ b/index.html
@@ -4,6 +4,59 @@
 <script>
 var sentences= 
 [
+   ['rapunzel1.mp4', 
+   [
+[30,250]
+], 'Rapunzel - Episode 1: Rapunzel\'s Birthday'
+ ],
+
+['rapunzel2.mp4', 
+   [
+[6,405]
+], 'Rapunzel - Episode 2: Rapa\'s Story'
+ ],
+
+['rapunzel4.mp4', 
+   [
+[6,218]
+], 'Rapunzel - Episode 4: Hedgehogs'
+ ],
+
+['rapunzel5.mp4', 
+   [
+[2,264]
+], 'Rapunzel - Episode 5: The flying Shawl'
+ ],
+
+['rapunzel6.mp4', 
+   [
+[1,195]
+], 'Rapunzel - Episode 6: Dear Mama and Papa'
+ ],
+
+['rapunzel7.mp4', 
+   [
+[2,217]
+], 'Rapunzel - Episode 7: In the Library'
+ ],
+
+['rapunzel8.mp4', 
+   [
+[2,210]
+], 'Rapunzel - Episode 8: A Long Braid'
+ ],
+
+['rapunzel9.mp4', 
+   [
+[1,204]
+], 'Rapunzel - Episode 9: The Market'
+ ],
+
+['rapunzel10.mp4', 
+   [
+[2,216]
+], 'Rapunzel - Episode 10: Trapped in the Tower'
+ ],
    
          
    ['pussclevercat1.mp4', 
