--- a/index.html
+++ b/index.html
@@ -57,6 +57,31 @@ var sentences=
 [2,216]
 ], 'Rapunzel - Episode 10: Trapped in the Tower'
  ],
+
+['rapunzel11.mp4', 
+   [
+[2,273]
+], 'Rapunzel - Episode 11: The Eye-Heal Potion'
+ ],
+
+['rapunzel12.mp4', 
+   [
+[2,207]
+], 'Rapunzel - Episode 12: More Letters'
+ ],
+
+
+['rapunzel13.mp4', 
+   [
+[2,202]
+], 'Rapunzel - Episode 13: Thorns'
+ ],
+
+['rapunzel14.mp4', 
+   [
+[2,262]
+], 'Rapunzel - Episode 14: The Boy from the Market'
+ ],
    
          
    ['pussclevercat1.mp4', 
