--- a/index.html
+++ b/index.html
@@ -83,7 +83,30 @@ var sentences=
 ], 'Rapunzel - Episode 14: The Boy from the Market'
  ],
    
-         
+['rapunzel15.mp4', 
+   [
+[1,275]
+], 'Rapunzel - Episode 15: More Visits'
+ ],
+
+['rapunzel16.mp4', 
+   [
+[1,218]
+], 'Rapunzel - Episode 16: Snip Snip'
+ ],
+
+['rapunzel17.mp4', 
+   [
+[1,228]
+], 'Rapunzel - Episode 17: A Little at a Time'
+ ],
+
+['rapunzel18.mp4', 
+   [
+[1,250]
+], 'Rapunzel - Episode 18: The Witch\'s Story'
+ ],
+   
    ['pussclevercat1.mp4', 
       [
          [8,16],
