--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@ var sentences=
 [1,250]
 ], 'Rapunzel - Episode 18: The Witch\'s Story'
  ],
+
+   ['rapunzel19.mp4', 
+   [
+[8,484]
+], 'Rapunzel - Episode 19: A Ditch'
+ ],
    
    ['pussclevercat1.mp4', 
       [
