--- a/index.html
+++ b/index.html
@@ -4,6 +4,80 @@
 <script>
 var sentences= 
 [
+ ['snowwhite1.mp4', 
+   [
+[6,202]
+], 'Snow White and the Seven Dwarfs - Episode 1: The New Queen'
+ ],
+
+['snowwhite2.mp4', 
+   [
+[2,186]
+], 'Snow White and the Seven Dwarfs - Episode 2: The Hunter'
+ ],
+
+['snowwhite3.mp4', 
+   [
+[2,153]
+], 'Snow White and the Seven Dwarfs - Episode 3: The Dark Forest'
+ ],
+
+['snowwhite4.mp4', 
+   [
+[2,190]
+], 'Snow White and the Seven Dwarfs - Episode 4: Seven of Everything'
+ ],
+
+['snowwhite5.mp4', 
+   [
+[2,157]
+], 'Snow White and the Seven Dwarfs - Episode 5: Seven Dwarfs'
+ ],
+
+['snowwhite6.mp4', 
+   [
+[4,202]
+], 'Snow White and the Seven Dwarfs - Episode 6: New Friends'
+ ],
+
+['snowwhite7.mp4', 
+   [
+[2,188]
+], 'Snow White and the Seven Dwarfs - Episode 7: The Coat'
+ ],
+
+['snowwhite8.mp4', 
+   [
+[2,189]
+], 'Snow White and the Seven Dwarfs - Episode 8: A Dark House'
+ ],
+
+['snowwhite9.mp4', 
+   [
+[2,202]
+], 'Snow White and the Seven Dwarfs - Episode 9: The Comb'
+ ],
+
+['snowwhite10.mp4', 
+   [
+[2,178]
+], 'Snow White and the Seven Dwarfs - Episode 10: The Apple'
+ ],
+
+
+['snowwhite11.mp4', 
+   [
+[2,196]
+], 'Snow White and the Seven Dwarfs - Episode 11: The Glass Coffin'
+ ],
+
+
+['snowwhite12.mp4', 
+   [
+[2,197]
+], 'Snow White and the Seven Dwarfs - Episode 12: The Wedding'
+ ],
+
    ['rapunzel1.mp4', 
    [
 [30,250]
