--- a/index.html
+++ b/index.html
@@ -2202,7 +2202,22 @@ var sentences=
       [309,316],
       [316,320]
   ], 'Journey to the West - Chapter 32: Lady White Bone'
- ] 
+ ],
+ ['smartphonegesture.mp4', 
+   [
+     [45,49],
+     [50,55],
+     [55,61],
+     [61,63],
+     [63,72],
+     [72,77],
+     [77,81],
+     [81,86],
+     [86,90],
+     [90,93],
+     [93,105]
+    ], 'Smartphone Gesture 1'
+ ]
 ];
 
 let video_index = 0;
