--- a/index.html
+++ b/index.html
@@ -2217,6 +2217,16 @@ var sentences=
      [90,93],
      [93,105]
     ], 'Smartphone Gesture 1'
+ ],
+ ['smartphonegesture2.mp4', 
+   [
+    [1,4],
+    [4,7],
+    [19,27],
+    [43,50],
+    [56,59],
+    [65,68]
+  ], 'Smartphone Gesture 2'
  ]
 ];
 
