--- a/index.html
+++ b/index.html
@@ -5,6 +5,77 @@
 var sentences= 
 [
 
+ ['cinderella1.mp4', 
+   [
+[9,178]
+], 'Cinderella - Episode 1: A Kind Girl'
+ ],
+
+['cinderella2.mp4', 
+   [
+[8,201]
+], 'Cinderella - Episode 2: Sad News'
+ ],
+
+['cinderella3.mp4', 
+   [
+[9,150]
+], 'Cinderella - Episode 3: A Royal Message'
+ ],
+
+['cinderella4.mp4', 
+   [
+[8,165]
+], 'Cinderella - Episode 4: Getting Ready for the Ball'
+ ],
+
+['cinderella5.mp4', 
+   [
+[9,158]
+], 'Cinderella - Episode 5: A Visitor'
+ ],
+
+['cinderella6.mp4', 
+   [
+[8,199]
+], 'Cinderella - Episode 6: A Wish Comes True'
+ ],
+
+['cinderella7.mp4', 
+   [
+[9,198]
+], 'Cinderella - Episode 7: The Princess Arrives'
+ ],
+
+['cinderella8.mp4', 
+   [
+[8,213]
+], 'Cinderella - Episode 8: The Ball'
+ ],
+
+['cinderella9.mp4', 
+   [
+[9,199]
+], 'Cinderella - Episode 9: Singing Softly'
+ ],
+
+['cinderella10.mp4', 
+   [
+[9,171]
+], 'Cinderella - Episode 10: Midnight'
+ ],
+
+['cinderella11.mp4', 
+   [
+[10,207]
+], 'Cinderella - Episode 11: The Glass Shoe'
+ ],
+
+['cinderella12.mp4', 
+   [
+[10,212]
+], 'Cinderella - Episode 12: Happily Ever After'
+ ],
  ['journey1.mp4', 
    [
 [7,337]
