--- a/index.html
+++ b/index.html
@@ -76,6 +76,25 @@ var sentences=
 [10,212]
 ], 'Cinderella - Episode 12: Happily Ever After'
  ],
+
+['alice1.mp4', 
+   [
+[8,304]
+], 'Alice\'s Adventure in Wonderland - Chapter 1: Down the Rabbit Hole'
+ ],
+
+['alice2.mp4', 
+   [
+[8,317]
+], 'Alice\'s Adventure in Wonderland - Chapter 2: A Strange Drink'
+ ],
+
+['alice3.mp4', 
+   [
+[8,294]
+], 'Alice\'s Adventure in Wonderland - Chapter 3: The Pool of Tears'
+ ],
+
  ['journey1.mp4', 
    [
 [7,337]
