--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
 var sentences= 
 [
 
+ 
+['thumbelina1.mp4', 
+   [
+
+[1,303]
+], 'Thumbelina 1: A Very Special Gift'
+ ],
+
+['thumbelina2.mp4', 
+   [
+[1,290]
+], 'Thumbelina 2: Thumbelina\'s New Home'
+ ],
+
+['thumbelina3.mp4', 
+   [
+[7,347]
+], 'Thumbelina 3: In the Swamp with the Burps'
+ ],
+
+['thumbelina4-1.mp4', 
+   [
+[0,157]
+], 'Thumbelina 4-1: Escape from the Swamp'
+ ],
+
+['thumbelina4-2.mp4', 
+   [
+[0,143]
+], 'Thumbelina 4-2: Escape from the Swamp'
+ ],
+ 
  ['cinderella1.mp4', 
    [
 [9,178]
