--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@ var sentences=
 [0,143]
 ], 'Thumbelina 4-2: Escape from the Swamp'
  ],
+
+ ['thumbelina5-1.mp4', 
+   [
+
+[1,128]
+], 'Thumbelina 5-1: A Very Special Gift'
+ ],
+
+['thumbelina5-2.mp4', 
+   [
+[0,213]
+], 'Thumbelina 5-2: Thumbelina\'s New Home'
+ ],
+ 
  
  ['cinderella1.mp4', 
    [
